--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/win_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/win_scene.fxml
@@ -52,11 +52,11 @@
                         <Cursor fx:constant="DEFAULT" />
                     </cursor>
                 </ImageView>
-                <Label fx:id="congratulations" layoutX="615.0" layoutY="601.0" prefHeight="30.0" prefWidth="319.0" stylesheets="@../css/livingBoard_scene.css"  styleClass="CongratText" text="CONGRATULATIONS!" >
+                <Label fx:id="congratulations" layoutX="511.0" layoutY="601.0" prefHeight="50.0" prefWidth="433.0" styleClass="CongratText" stylesheets="@../css/livingBoard_scene.css" text="CONGRATULATIONS!">
                 </Label>
-                <Label fx:id="youWonTheGame" layoutX="599.0" layoutY="646.0" prefHeight="114.0" prefWidth="296.0" stylesheets="@../css/livingBoard_scene.css" styleClass="CongratText" text="YOU'VE WON THE GAME ">
+                <Label fx:id="youWonTheGame" layoutX="479.0" layoutY="646.0" prefHeight="114.0" prefWidth="506.0" styleClass="CongratText" stylesheets="@../css/livingBoard_scene.css" text="YOU'VE WON THE GAME ">
                 </Label>
-                <Label fx:id="bestPlayer" layoutX="550.0" layoutY="798.0" stylesheets="@../css/livingBoard_scene.css" styleClass="CongratText" text="YOU ARE THE BEST PLAYER OF ALL TIME ">
+                <Label fx:id="bestPlayer" layoutX="360.0" layoutY="750.0" styleClass="CongratText" stylesheets="@../css/livingBoard_scene.css" text="YOU ARE THE BEST PLAYER OF ALL TIME ">
                 </Label>
                 <Label fx:id="lost" layoutX="401.0" layoutY="583.0" prefHeight="107.0" prefWidth="593.0" styleClass="LoseText" text="SORRY...YOU LOST! " visible="false">
                 </Label>
@@ -86,7 +86,7 @@
             </ImageView>
             <Button fx:id="MyScoreDetail" layoutX="547.0" layoutY="18.0" mnemonicParsing="false" onMouseClicked="#showDetailsOfTheScore" prefHeight="60.0" prefWidth="319.0" styleClass="WinText" text="VIEW DETAIL">
             </Button>
-            <Button fx:id="backToMenu" layoutX="1231.0" layoutY="337.0" mnemonicParsing="false" onMouseClicked="#backToMenu" prefHeight="42.0" prefWidth="251.0" styleClass="WinText" text="     GO BACK TO THE INITIAL MENU" />
+            <Button fx:id="backToMenu" layoutX="1231.0" layoutY="337.0" mnemonicParsing="false" onMouseClicked="#backToMenu" prefHeight="42.0" prefWidth="251.0" styleClass="BackText" text="     GO BACK TO THE  MENU" />
             <ImageView fitHeight="30.0" fitWidth="28.0" layoutX="1240.0" layoutY="335.0">
                <image>
                   <Image url="@../Publisher_material/casa2.png" />
