--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/login_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/login_scene.fxml
@@ -17,7 +17,7 @@
                   <Insets bottom="20.0" />
                </VBox.margin>
                   </Label>
-                  <TextField fx:id="nicknameTextFiled" alignment="CENTER" maxHeight="500.0" maxWidth="500.0" prefHeight="49.0" prefWidth="500.0" promptText="insert your nickname..." styleClass="rounded-input" stylesheets="@../css/server_scene.css">
+                  <TextField fx:id="nicknameTextField" alignment="CENTER" maxHeight="500.0" maxWidth="500.0" prefHeight="49.0" prefWidth="500.0" promptText="insert your nickname..." styleClass="rounded-input" stylesheets="@../css/server_scene.css">
                <VBox.margin>
                   <Insets bottom="20.0" />
                </VBox.margin>
