--- a/MyShelfie/src/main/resources/it/polimi/ingsw/view/gui/css/livingBoard.css
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/view/gui/css/livingBoard.css
@@ -1,5 +1,5 @@
 .rootPane {
-    -fx-background-image: url("../board/livingroom.png");
+    -fx-background-image: url("../boards/livingroom.png");
     -fx-background-size: stretch;
 }
 
